Completed basic first page
- Handled infinite scroll by adding scroll listener on recyclerview
- Handled entered text search on editext
- hide keyboard use press done key in the keyboard, clear the data from adapter
- Added error layout
- Added util class to add util functions like hiding keyboard and all

--- a/app/src/main/res/layout/fragment_pixabay_home.xml
+++ b/app/src/main/res/layout/fragment_pixabay_home.xml
@@ -1,6 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginStart="@dimen/fragment_left_margin"
+    android:layout_marginEnd="@dimen/fragment_right_margin">
+
+    <EditText
+        android:id="@+id/etSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/common_margin"
+        android:hint="@string/search_hint_text"
+        android:inputType="text"
+        android:imeOptions="actionDone"
+        android:lines="1" />
+
+    <TextView
+        android:id="@+id/tvQueryText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/etSearch"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="showing result for fruits"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvImages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tvQueryText"
+        android:layout_marginTop="@dimen/common_margin"
+        tools:itemCount="5"
+        tools:listitem="@layout/item_pixabay_image" />
+
+    <TextView
+        android:id="@+id/tvLoadingText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/rvImages"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/loading_more_content"
+        android:layout_marginTop="@dimen/common_margin_between_views"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <ProgressBar
+        android:id="@+id/pbLoader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:indeterminateTint="@color/blue"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <LinearLayout
+        android:id="@+id/llError"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/something_went_wrong"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnRetry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corner"
+            android:layout_marginTop="@dimen/common_margin_between_views"
+            android:drawableStart="@drawable/ic_baseline_refresh_24"
+            android:drawablePadding="@dimen/common_margin_between_views"
+            android:text="@string/retry"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:paddingStart="@dimen/common_margin"
+            android:paddingEnd="@dimen/common_margin"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
