--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="fragment_left_margin">16dp</dimen>
     <dimen name="common_margin">16dp</dimen>
     <dimen name="common_margin_between_views">8dp</dimen>
+    <dimen name="small_margin_between_views">4dp</dimen>
 
     <dimen name="tag_size">12sp</dimen>
     
