--- a/app/src/main/res/layout/item_pixabay_image.xml
+++ b/app/src/main/res/layout/item_pixabay_image.xml
@@ -10,8 +10,10 @@
 
     <ImageView
         android:id="@+id/ivPixabayImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_image_24"/>
 
@@ -23,6 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/common_margin"
         android:textSize="@dimen/tag_size"
+        android:textStyle="bold"
         tools:text="#dummy_image, #test"/>
 
     <TextView
