--- a/app/src/main/res/layout/item_pixabay_image.xml
+++ b/app/src/main/res/layout/item_pixabay_image.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/ivPixabayImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="@dimen/preview_size"
+        android:layout_height="@dimen/preview_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
