--- a/app/src/main/res/layout/fragment_pixabay_home.xml
+++ b/app/src/main/res/layout/fragment_pixabay_home.xml
@@ -29,8 +29,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvImages"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvQueryText"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="@dimen/common_margin"
         tools:itemCount="5"
         tools:listitem="@layout/item_pixabay_image" />
