--- a/app/src/main/res/layout/fragment_pixabay_home.xml
+++ b/app/src/main/res/layout/fragment_pixabay_home.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
     android:layout_marginStart="@dimen/fragment_left_margin"
     android:layout_marginEnd="@dimen/fragment_right_margin">
 
@@ -35,18 +37,6 @@
         android:layout_marginTop="@dimen/common_margin"
         tools:itemCount="5"
         tools:listitem="@layout/item_pixabay_image" />
-
-    <TextView
-        android:id="@+id/tvLoadingText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/rvImages"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/loading_more_content"
-        android:layout_marginTop="@dimen/common_margin_between_views"
-        android:visibility="gone"
-        tools:visibility="visible"/>
 
     <ProgressBar
         android:id="@+id/pbLoader"
